some controllers and logics updated